--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,6 @@ services:
     restart: unless-stopped
     volumes:
       - /opt/traefik-logs:/var/log/traefik
-      - ./logrotate/logrotate.conf:/etc/logrotate.conf
+      - ./logrotate/logrotate.conf:/etc/logrotate.conf:ro
     environment:
       - LOGROTATE_INTERVAL=daily
