--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,12 +14,14 @@ services:
     volumes:
       - /opt/traefik-logs:/var/log/traefik
       - ./crowdsec/acquis.yaml:/etc/crowdsec/acquis.yaml
-      - ./crowdsec/acquis.d/appsec.yaml:/etc/crowdsec/acquis.d/appsec.yaml
+      # - ./crowdsec/appsec.yaml:/etc/crowdsec/acquis.d/appsec.yaml
     environment:
       COLLECTIONS: >
         crowdsecurity/traefik
         crowdsecurity/appsec-virtual-patching
         crowdsecurity/appsec-generic-rules
+    security_opt:
+      - no-new-privileges:true
     ports:
       # - "8081:8080"  # CrowdSec API (optional) 8080 is used by coolify-proxy
       - "7422:7422"  # AppSec
