--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,12 +34,12 @@ services:
       COLLECTIONS: >
         crowdsecurity/traefik crowdsecurity/appsec-virtual-patching crowdsecurity/appsec-generic-rules
 
-
     security_opt:
       - no-new-privileges:true
-    ports:
-      - "8080:8080" # CrowdSec API
-      - "7422:7422" # AppSec
+      
+    # ports:
+    #   - "8080:8080" # CrowdSec API
+    #   - "7422:7422" # AppSec
 
   bouncer-traefik:
     image: docker.io/fbonalair/traefik-crowdsec-bouncer:latest
