added rate limiter to readme and fixed crowdsec agen host

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,16 +37,13 @@ services:
     security_opt:
       - no-new-privileges:true
 
-    # ports:
-    #   - "8080:8080" # CrowdSec API
-    #   - "7422:7422" # AppSec
 
   bouncer-traefik:
     image: docker.io/fbonalair/traefik-crowdsec-bouncer:latest
     container_name: bouncer-traefik
     environment:
       CROWDSEC_BOUNCER_API_KEY: ${CROWSEC_API_KEY}
-      CROWDSEC_AGENT_HOST: crowdsec:8080
+      CROWDSEC_AGENT_HOST: 0.0.0.0:8080
     networks:
       - coolify
     depends_on:
