added cloudflare integration, ratelimiting and redid crowdsec host

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,7 +43,7 @@ services:
     container_name: bouncer-traefik
     environment:
       CROWDSEC_BOUNCER_API_KEY: ${CROWSEC_API_KEY}
-      CROWDSEC_AGENT_HOST: 0.0.0.0:8080
+      CROWDSEC_AGENT_HOST: crowdsec:8080
     networks:
       - coolify
     depends_on:
